Added HTML for the homepage

--- a/Tiny-Clothing/Views/Home/Index.cshtml
+++ b/Tiny-Clothing/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Welcome to Tiny Clothes";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1>Tiny Clothes</h1>
+<p>Wee Fashion</p>
+<div class="card" style="width: 18rem;">
+    <img src="https://via.placeholder.com/250" class="card-img-top" alt="Placeholder image"/>
+    <div class="card-body">
+        <h5 class="card-title">Our products</h5>
+        <p class="card-text">
+            We sell tiny clothes for your pets and stuffed animals. These are not baby clothes!!
+        </p>
+    </div>
 </div>
+
+<p>
+    We do not accept returns or give refunds, at all ever. Sorry for the inconvenience
+</p>
