--- a/Tiny-Clothing/Views/Home/Add.cshtml
+++ b/Tiny-Clothing/Views/Home/Add.cshtml
@@ -14,9 +14,16 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Size" class="control-label"></label>
-                <input asp-for="Size" class="form-control" />
-                <span asp-validation-for="Size" class="text-danger"></span>
-            </div>
+                <select multiple asp-for="Size" class="form-control">
+                    <option>Extra Extra Extra Small</option>
+                    <option>Extra Extra Small</option>
+                    <option>Extra Small</option>
+                    <option>Small</option>
+                    <option>Medium Small</option>
+                    <option>Still Not Big</option>
+                </select>
+                    <span asp-validation-for="Size" class="text-danger"></span>
+</div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
                 <input asp-for="Type" class="form-control" />
@@ -24,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Color" class="control-label"></label>
-                <input asp-for="Color" class="form-control" />
+                <input type="color" asp-for="Color" class="form-control" />
                 <span asp-validation-for="Color" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -39,12 +46,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input type="number" asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
+                <input type= "number" asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
